Created flashcards section
