# laravel/src/routes/web.php
@@ -3,6 +3,7 @@
 use Illuminate\Contracts\View\View;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\FlashcardController;
 use App\Http\Controllers\ThemeController;
 use App\Http\Controllers\TokenController;
 
@@ -12,7 +13,7 @@ Route::get('/', function (): View {
 
 Route::prefix('api')->group(function () {
     // Token
-    Route::get('/token', TokenController::class .'@index')->name('api.token');
+    Route::get('/csrf_token', TokenController::class .'@index')->name('api.csrf_token');
     // Categories
     Route::get('/categories', CategoryController::class .'@index')->name('categories.index');
     Route::post('/categories', CategoryController::class .'@store')->name('categories.store');
@@ -25,4 +26,11 @@ Route::prefix('api')->group(function () {
     Route::get('/themes/{theme}', ThemeController::class .'@show')->name('themes.show');
     Route::put('/themes/{theme}', ThemeController::class .'@update')->name('themes.update');
     Route::delete('/themes/{theme}', ThemeController::class .'@destroy')->name('themes.destroy');
+
+    // Themes
+    Route::get('/flashcards', FlashcardController::class .'@index')->name('flashcards.index');
+    Route::post('/flashcards', FlashcardController::class .'@store')->name('flashcards.store');
+    Route::get('/flashcards/{flashcard}', FlashcardController::class .'@show')->name('flashcards.show');
+    Route::put('/flashcards/{flashcard}', FlashcardController::class .'@update')->name('flashcards.update');
+    Route::delete('/flashcards/{flashcard}', FlashcardController::class .'@destroy')->name('flashcards.destroy');
 });
